header section added

--- a/world-cup-main/index.html
+++ b/world-cup-main/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The World Cup Football</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/372b07dd8d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="heading">
+            <h1>
+                The Greatest <br> Show On The <br> Turf
+            </h1>
+            <p>World Cup, formally FIFA World Cup, in football (soccer),<br> quadrennial tournament of men’s national teams <br> that determines the sport’s world champion. <br> It is likely the most popular sporting event in the world,<br> drawing billions of television viewers every tournament. </p>
+            <button class="watch-live-btn">Watch Live <i class="fa-solid fa-greater-than"></i></button>
+        </div>
+        <div class="banner-img">
+            <img src="assets/Banner Image.png" alt="Marcelo">
+        </div>
+    </header>
 </body>
 </html>
