main section added

--- a/world-cup-main/index.html
+++ b/world-cup-main/index.html
@@ -21,5 +21,103 @@
             <img src="assets/Banner Image.png" alt="Marcelo">
         </div>
     </header>
+    <main class="main-body">
+        <nav class="navigation">
+            <button class="nav-btn" onclick="">
+                Upcoming Match
+            </button>
+            <button class="nav-btn"  onclick="">
+                Groups
+            </button>
+            <button class="nav-btn nav-blog"  onclick="">
+                Blog
+            </button>
+            
+        </nav>
+        <article class="blogs-container">
+            <div class="blogs">
+                <img src="assets/Blog Image.png" alt="Football Match">
+                <button>Transfer</button>
+                <h4>Transfer Live: Transfer Rumors</h4>
+                <div class="icon">
+                    <p class="icon"><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p class="icon"><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                </div>
+            </div>
+            <div class="blogs">
+                <img src="assets/Blog Image.png" alt="Football Match">
+                <button>Transfer</button>
+                <h4>Transfer Live: Transfer Rumors</h4>
+                <div class="icon">
+                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                </div>
+            </div>
+            <div class="blogs">
+                <img src="assets/Blog Image.png" alt="Football Match">
+                <button>Transfer</button>
+                <h4>Transfer Live: Transfer Rumors</h4>
+                <div class="icon">
+                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                </div>
+            </div>
+            <div class="blogs">
+                <img src="assets/Blog Image.png" alt="Football Match">
+                <button>Transfer</button>
+                <h4>Transfer Live: Transfer Rumors</h4>
+                <div class="icon">
+                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                </div>
+            </div>
+            <div class="blogs">
+                <img src="assets/Blog Image.png" alt="Football Match">
+                <button>Transfer</button>
+                <h4>Transfer Live: Transfer Rumors</h4>
+                <div class="icon">
+                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                </div>
+            </div>
+            <div class="blogs">
+                <img src="assets/Blog Image.png" alt="Football Match">
+                <button>Transfer</button>
+                <h4>Transfer Live: Transfer Rumors</h4>
+                <div class="icon">
+                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                </div>
+            </div>
+            <div class="blogs">
+                <img src="assets/Blog Image.png" alt="Football Match">
+                <button>Transfer</button>
+                <h4>Transfer Live: Transfer Rumors</h4>
+                <div class="icon">
+                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                </div>
+            </div>
+            <div class="blogs">
+                <img src="assets/Blog Image.png" alt="Football Match">
+                <button>Transfer</button>
+                <h4>Transfer Live: Transfer Rumors</h4>
+                <div class="icon">
+                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                </div>
+            </div>
+            <div class="blogs">
+                <img src="assets/Blog Image.png" alt="Football Match">
+                <button>Transfer</button>
+                <h4>Transfer Live: Transfer Rumors</h4>
+                <div class="icon">
+                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                </div>
+            </div>
+           
+        </article>
+    </main>
 </body>
 </html>
