--- a/world-cup-main/index.html
+++ b/world-cup-main/index.html
@@ -120,4 +120,16 @@
         </article>
     </main>
 </body>
+<footer class="footer">
+    <h1>Goal</h1>
+    <hr>
+    <div class="nav-footer">
+        <p>Contact Us</p>
+        <p>Terms of Service</p>
+        <p>Privacy Policy</p>
+        <p>Privacy Settings</p>
+        <p>Goal App</p>
+        <p>Goal Live</p>
+    </div>
+</footer>
 </html>
