responsive for mobile added

--- a/world-cup-main/index.html
+++ b/world-cup-main/index.html
@@ -14,7 +14,7 @@
             <h1>
                 The Greatest <br> Show On The <br> Turf
             </h1>
-            <p>World Cup, formally FIFA World Cup, in football (soccer),<br> quadrennial tournament of men’s national teams <br> that determines the sport’s world champion. <br> It is likely the most popular sporting event in the world,<br> drawing billions of television viewers every tournament. </p>
+            <p>World Cup, formally FIFA World Cup, in football (soccer),quadrennial tournament of men’s national teams that determines the sport’s world champion.</p>
             <button class="watch-live-btn">Watch Live <i class="fa-solid fa-greater-than"></i></button>
         </div>
         <div class="banner-img">
@@ -37,8 +37,10 @@
         <article class="blogs-container">
             <div class="blogs">
                 <img src="assets/Blog Image.png" alt="Football Match">
-                <button>Transfer</button>
-                <h4>Transfer Live: Transfer Rumors</h4>
+                <div>
+                    <button>Transfer</button>
+                    <h4>Transfer Live: Transfer Rumors</h4>
+                </div>
                 <div class="icon">
                     <p class="icon"><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
                     <p class="icon"><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
@@ -46,77 +48,92 @@
             </div>
             <div class="blogs">
                 <img src="assets/Blog Image.png" alt="Football Match">
-                <button>Transfer</button>
-                <h4>Transfer Live: Transfer Rumors</h4>
+                <div>
+                    <button>Transfer</button>
+                    <h4>Transfer Live: Transfer Rumors</h4>
+                </div>
                 <div class="icon">
-                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
-                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                    <p class="icon"><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p class="icon"><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
                 </div>
             </div>
             <div class="blogs">
                 <img src="assets/Blog Image.png" alt="Football Match">
-                <button>Transfer</button>
-                <h4>Transfer Live: Transfer Rumors</h4>
+                <div>
+                    <button>Transfer</button>
+                    <h4>Transfer Live: Transfer Rumors</h4>
+                </div>
                 <div class="icon">
-                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
-                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                    <p class="icon"><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p class="icon"><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
                 </div>
             </div>
             <div class="blogs">
                 <img src="assets/Blog Image.png" alt="Football Match">
-                <button>Transfer</button>
-                <h4>Transfer Live: Transfer Rumors</h4>
+                <div>
+                    <button>Transfer</button>
+                    <h4>Transfer Live: Transfer Rumors</h4>
+                </div>
                 <div class="icon">
-                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
-                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                    <p class="icon"><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p class="icon"><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
                 </div>
             </div>
             <div class="blogs">
                 <img src="assets/Blog Image.png" alt="Football Match">
-                <button>Transfer</button>
-                <h4>Transfer Live: Transfer Rumors</h4>
+                <div>
+                    <button>Transfer</button>
+                    <h4>Transfer Live: Transfer Rumors</h4>
+                </div>
                 <div class="icon">
-                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
-                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                    <p class="icon"><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p class="icon"><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
                 </div>
             </div>
             <div class="blogs">
                 <img src="assets/Blog Image.png" alt="Football Match">
-                <button>Transfer</button>
-                <h4>Transfer Live: Transfer Rumors</h4>
+                <div>
+                    <button>Transfer</button>
+                    <h4>Transfer Live: Transfer Rumors</h4>
+                </div>
                 <div class="icon">
-                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
-                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                    <p class="icon"><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p class="icon"><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
                 </div>
             </div>
             <div class="blogs">
                 <img src="assets/Blog Image.png" alt="Football Match">
-                <button>Transfer</button>
-                <h4>Transfer Live: Transfer Rumors</h4>
+                <div>
+                    <button>Transfer</button>
+                    <h4>Transfer Live: Transfer Rumors</h4>
+                </div>
                 <div class="icon">
-                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
-                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                    <p class="icon"><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p class="icon"><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
                 </div>
             </div>
             <div class="blogs">
                 <img src="assets/Blog Image.png" alt="Football Match">
-                <button>Transfer</button>
-                <h4>Transfer Live: Transfer Rumors</h4>
+                <div>
+                    <button>Transfer</button>
+                    <h4>Transfer Live: Transfer Rumors</h4>
+                </div>
                 <div class="icon">
-                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
-                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                    <p class="icon"><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p class="icon"><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
                 </div>
             </div>
             <div class="blogs">
                 <img src="assets/Blog Image.png" alt="Football Match">
-                <button>Transfer</button>
-                <h4>Transfer Live: Transfer Rumors</h4>
+                <div>
+                    <button>Transfer</button>
+                    <h4>Transfer Live: Transfer Rumors</h4>
+                </div>
                 <div class="icon">
-                    <p><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
-                    <p><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
+                    <p class="icon"><img src="assets/Time Icon.png" alt="time icon"> 10h</p>
+                    <p class="icon"><img src="assets/Chat Icon.png" alt="chat icon"> 27</p>
                 </div>
             </div>
-           
         </article>
     </main>
 </body>
@@ -130,6 +147,11 @@
         <p>Privacy Settings</p>
         <p>Goal App</p>
         <p>Goal Live</p>
+    </div>
+    <div class="social-media-icon">
+        <p><i class="fa-brands fa-facebook-square"></i></p>
+        <p><i class="fa-brands fa-twitter-square"></i></p>
+        <p><i class="fa-brands fa-linkedin"></i></p>
     </div>
 </footer>
 </html>
