new page for upcoming match added then responsivestyle added for tablet and mobile

--- a/world-cup-main/index.html
+++ b/world-cup-main/index.html
@@ -149,9 +149,9 @@
         <p>Goal Live</p>
     </div>
     <div class="social-media-icon">
-        <p><i class="fa-brands fa-facebook-square"></i></p>
-        <p><i class="fa-brands fa-twitter-square"></i></p>
-        <p><i class="fa-brands fa-linkedin"></i></p>
+        <a href="www.facebook.com"><i class="fa-brands fa-facebook-square"></i></a>
+        <a href="www.twitter.com"><i class="fa-brands fa-twitter-square"></i></a>
+        <a href="www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
     </div>
 </footer>
 </html>
