solved problem with first page responsiveness

--- a/world-cup-main/index.html
+++ b/world-cup-main/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="heading">
             <h1>
-                The Greatest <br> Show On The <br> Turf
+                The Greatest Show On The Turf
             </h1>
             <p>World Cup, formally FIFA World Cup, in football (soccer),quadrennial tournament of men’s national teams that determines the sport’s world champion.</p>
             <button class="watch-live-btn">Watch Live <i class="fa-solid fa-greater-than"></i></button>
