final correction with responsive design page 3

--- a/world-cup-main/all-groups.html
+++ b/world-cup-main/all-groups.html
@@ -34,16 +34,7 @@
             </button>
             
         </nav>
-        <article class="all-groups-container">
-            <div class="match all-groups">
-                <h2>Group A</h2>
-                <div class="groups">
-                    <img class="flag" src="assets/flag-argentina.jpg" alt="">
-                    <img class="flag" src="assets/flag-brazil.png" alt="">
-                    <img class="flag" src="assets/germany Flag.png" alt="">
-                    <img class="flag" src="assets/Flag.png" alt="">
-                </div>
-            </div>
+        <article class="groups-container">
             <div class="all-groups">
                 <h2>Group A</h2>
                 <div class="groups">
@@ -63,7 +54,7 @@
                 </div>
             </div>
             <div class="all-groups">
-                <h2>Group A</h2>
+                <h2>Group B</h2>
                 <div class="groups">
                     <img class="flag" src="assets/flag-argentina.jpg" alt="">
                     <img class="flag" src="assets/flag-brazil.png" alt="">
@@ -72,7 +63,7 @@
                 </div>
             </div>
             <div class="all-groups">
-                <h2>Group A</h2>
+                <h2>Group C</h2>
                 <div class="groups">
                     <img class="flag" src="assets/flag-argentina.jpg" alt="">
                     <img class="flag" src="assets/flag-brazil.png" alt="">
@@ -81,7 +72,7 @@
                 </div>
             </div>
             <div class="all-groups">
-                <h2>Group A</h2>
+                <h2>Group D</h2>
                 <div class="groups">
                     <img class="flag" src="assets/flag-argentina.jpg" alt="">
                     <img class="flag" src="assets/flag-brazil.png" alt="">
@@ -90,7 +81,7 @@
                 </div>
             </div>
             <div class="all-groups">
-                <h2>Group A</h2>
+                <h2>Group E</h2>
                 <div class="groups">
                     <img class="flag" src="assets/flag-argentina.jpg" alt="">
                     <img class="flag" src="assets/flag-brazil.png" alt="">
@@ -99,7 +90,16 @@
                 </div>
             </div>
             <div class="all-groups">
-                <h2>Group A</h2>
+                <h2>Group F</h2>
+                <div class="groups">
+                    <img class="flag" src="assets/flag-argentina.jpg" alt="">
+                    <img class="flag" src="assets/flag-brazil.png" alt="">
+                    <img class="flag" src="assets/germany Flag.png" alt="">
+                    <img class="flag" src="assets/Flag.png" alt="">
+                </div>
+            </div>
+            <div class="all-groups">
+                <h2>Group I</h2>
                 <div class="groups">
                     <img class="flag" src="assets/flag-argentina.jpg" alt="">
                     <img class="flag" src="assets/flag-brazil.png" alt="">
