pages linked together

--- a/world-cup-main/upcoming-match.html
+++ b/world-cup-main/upcoming-match.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="all-groups.html">
     <script src="https://kit.fontawesome.com/372b07dd8d.js" crossorigin="anonymous"></script>
 </head>
 <body>
